Add port 8080:80 docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     volumes:
       - data:/var/www/html
     restart: unless-stopped
+    ports:
+      - 8080:80
     depends_on:
       - db
       - redis
